[package]
name = "libcwtch"
version = "0.1.0"
authors = ["Dan Ballard <dan@mindstab.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
serde_json = "1.0"
serde = { version = "1.0.127", features = ["derive"] }

